@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.synyx.urlaubsverwaltung.account.Account;
 import org.synyx.urlaubsverwaltung.account.AccountService;
+import org.synyx.urlaubsverwaltung.account.HolidayAccountVacationDays;
 import org.synyx.urlaubsverwaltung.account.VacationDaysLeft;
 import org.synyx.urlaubsverwaltung.account.VacationDaysService;
 import org.synyx.urlaubsverwaltung.application.application.Application;
@@ -35,17 +36,17 @@ import java.time.LocalDate;
 import java.time.Year;
 import java.util.List;
 import java.util.Locale;
+import java.util.Map;
 import java.util.Optional;
 
+import static java.time.temporal.TemporalAdjusters.lastDayOfYear;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 import static org.springframework.util.StringUtils.hasText;
 import static org.synyx.urlaubsverwaltung.person.Role.APPLICATION_ADD;
 import static org.synyx.urlaubsverwaltung.person.Role.BOSS;
 import static org.synyx.urlaubsverwaltung.person.Role.OFFICE;
 import static org.synyx.urlaubsverwaltung.person.Role.SICK_NOTE_ADD;
 import static org.synyx.urlaubsverwaltung.person.Role.SICK_NOTE_VIEW;
-import static org.synyx.urlaubsverwaltung.util.DateUtil.getLastDayOfYear;
 
 /**
  * Controller to display the personal overview page with basic information about
@@ -151,7 +152,7 @@ public class OverviewViewController implements HasLaunchpad {
     private void prepareSickNoteList(Person person, int year, Model model) {
 
         final LocalDate from = Year.of(year).atDay(1);
-        final LocalDate to = getLastDayOfYear(year);
+        final LocalDate to = from.with(lastDayOfYear());
 
         final List<SickNote> sickNotes = sickNoteService.getByPersonAndPeriod(person, from, to);
 
@@ -167,8 +168,9 @@ public class OverviewViewController implements HasLaunchpad {
     private void prepareApplications(Person person, int year, Model model, Locale locale) {
 
         // get the person's applications for the given year
-        final List<Application> applications =
-            applicationService.getApplicationsForACertainPeriodAndPerson(Year.of(year).atDay(1), getLastDayOfYear(year), person);
+        final LocalDate startDate = Year.of(year).atDay(1);
+        final LocalDate endDate = startDate.with(lastDayOfYear());
+        final List<Application> applications = applicationService.getApplicationsForACertainPeriodAndPerson(startDate, endDate, person);
 
         final List<OverviewApplicationDto> applicationsForLeave;
         final UsedDaysOverview usedDaysOverview;
@@ -181,7 +183,7 @@ public class OverviewViewController implements HasLaunchpad {
                 .map(application -> new ApplicationForLeave(application, workDaysCountService))
                 .sorted(comparing(ApplicationForLeave::getStartDate).reversed())
                 .map(applicationForLeave -> overviewApplicationDto(applicationForLeave, locale))
-                .collect(toList());
+                .toList();
             usedDaysOverview = new UsedDaysOverview(applications, year, workDaysCountService);
         }
 
@@ -224,9 +226,10 @@ public class OverviewViewController implements HasLaunchpad {
         final Optional<Account> maybeAccount = accountService.getHolidaysAccount(year, person);
         if (maybeAccount.isPresent()) {
             final Account account = maybeAccount.get();
-            final Optional<Account> accountNextYear = accountService.getHolidaysAccount(year + 1, person);
 
-            final VacationDaysLeft vacationDaysLeft = vacationDaysService.getVacationDaysLeft(account, accountNextYear);
+            final List<Account> accountNextYear = accountService.getHolidaysAccount(year + 1, person).stream().toList();
+            final Map<Account, HolidayAccountVacationDays> accountHolidayAccountVacationDaysMap = vacationDaysService.getVacationDaysLeft(List.of(account), Year.of(year), accountNextYear);
+            final VacationDaysLeft vacationDaysLeft = accountHolidayAccountVacationDaysMap.get(account).vacationDaysYear();
             model.addAttribute("vacationDaysLeft", vacationDaysLeft);
 
             final BigDecimal expiredRemainingVacationDays = vacationDaysLeft.getExpiredRemainingVacationDays(now, account.getExpiryDate());
